--- a/webstuff/main.css
+++ b/webstuff/main.css
@@ -139,68 +139,99 @@ span.diff-html-changed:hover span.tip {
 }
 /*End of diff stuff*/
 
+
 /*Icons*/
 .buttons{
   clear:both;
+  margin: 0 auto;
+  width: 300px;
 }
+
 .icon{
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   float: left;
-  margin: 5px;
+  border: 0px;
+  cursor: pointer;
 }
 
 .icon-next{
-  background-image:url('/icons.png');
-  background-position: -210px 70px; 
+  background-image:url('/icons-simple.png');
+  background-position: 0px 0px; 
 }
 
 .icon-revert{
-  background-image:url('/icons.png');
-  background-position: -140px 70px; 
+  background-image:url('/icons-simple.png');
+  background-position: -50px 0px; 
 }
 
 .icon-revertwarn{
-  background-image:url('/icons.png');
-  background-position: -350px 0px; 
+  background-image:url('/icons-simple.png');
+  background-position: -100px 0px; 
 }
 .icon-warn{
-  background-image:url('/icons.png');
-  background-position: -70px 70px; 
+  background-image:url('/icons-simple.png');
+  background-position: -150px 0px; 
 }
 .icon-block{
-  background-image:url('/icons.png');
-  background-position: -280px 0px; 
+  background-image:url('/icons-simple.png');
+  background-position: -200px 0px; 
 }
 
 .icon-delete{
-  background-image:url('/icons.png');
-  background-position: -140 0px; 
+  background-image:url('/icons-simple.png');
+  background-position: -250px 0px; 
 }
 .icon-whitelist{
-  background-image:url('/icons.png');
-  background-position: -210px 0px; 
+  background-image:url('/icons-simple.png');
+  background-position: 0px 50px; 
 }
 
 .icon-view{
-  background-image:url('/icons.png');
-  background-position: 0px 0px; 
+  background-image:url('/icons-simple.png');
+  background-position: -50px 50px; 
 }
 .icon-edit{
-  background-image:url('/icons.png');
-  background-position: -70px 0px; 
+  background-image:url('/icons-simple.png');
+  background-position: -100px 50px; 
 }
 .icon-user{
-  background-image:url('/icons.png');
-  background-position: 0px 70px; 
+  background-image:url('/icons-simple.png');
+  background-position: -150px 50px; 
 }
 
 .icon-talk{
-  background-image:url('/icons.png');
-  background-position: -350px 70px; 
+  background-image:url('/icons-simple.png');
+  background-position: -200px 50px; 
 }
 .icon-newmsg{
-  background-image:url('/icons.png');
-  background-position: -280 70px; 
+  background-image:url('/icons-simple.png');
+  background-position: -250px 50px; 
 }
-/*End of icons*/
+/*End of icons-simple*/
+
+
+.centered{
+  margin: 0 auto;
+  clear: both;
+}
+
+body{
+  font-family:Helvetica,Arial,Verdana,sans-serif;
+}
+
+h1{
+  clear: both;
+  margin-top: 60px;
+}
+
+.footer{
+  width: 200px;
+  margin-top: 50px;
+  border-top: 1px solid black;
+}
+
+.footer a{
+  font-size: 16px;
+  color: black;
+}
