--- a/webstuff/main.css
+++ b/webstuff/main.css
@@ -222,6 +222,7 @@ body{
 
 h1{
   clear: both;
+  font-size: 48;
   margin-top: 60px;
 }
 
@@ -233,5 +234,15 @@ h1{
 
 .footer a{
   font-size: 16px;
+  color: black;
+}
+
+#status {
+  font-size: 24px;
+  color: #aaa;
+}
+
+#rcCount {
+  font-size: 36px;
   color: black;
 }
