--- a/webstuff/main.css
+++ b/webstuff/main.css
@@ -231,6 +231,8 @@ h1#title:hover {
   margin: 0 auto;
   margin-top: 50px;
   border-top: 1px solid black;
+  text-align: center;
+  padding: 5px;
 }
 
 .footer a{
