--- a/webstuff/main.css
+++ b/webstuff/main.css
@@ -275,3 +275,9 @@ ul#loglines{
 #titlediv{
   margin-left: 50px;
 }
+
+.newpage{
+    background-color: #eef;
+    margin : 10px 50px 10px 50px ; 
+    clear: both;
+}
