--- a/templates/diff.rhtml
+++ b/templates/diff.rhtml
@@ -39,6 +39,9 @@
                     case 84:
                         talk();
                     break;
+                    case 80:
+                        patrol();
+                    break;
                     case 77:
                         newMessage();
                     break;
@@ -93,6 +96,12 @@
             }); 
             next();
         }
+        function patrol(){
+            $.ajax({
+                url: '/patrol?id=<%= @rcid %>&page=<%= @page %>'
+            }); 
+            next();
+        }
     </script>
     <div id="log">
     <%= ShowLogSnippetController.new(@numdiffs, @log).generateRawHtml %>
@@ -110,6 +119,7 @@
     <button class="icon icon-user" onClick="userPage()" title="<%= t.userpage %> (u)"></button>
     <button class="icon icon-talk" onClick="talk()" title="<%= t.usertalk %> (t)"></button>
     <button class="icon icon-newmsg" onClick="newMessage()" title="<%= t.newmessage %> (m)"></button>
+    <button class="icon icon-patrol" onClick="patrol()" title="<%= t.patrol %> (p)"></button>
     </div>
     <ul class="menu">
         <li><a href="/editWL"><%= t.editWL %></a></li>
